# Betriebssysteme

./: CMakeLists.txt
BS_Pro/: CMakeLists.txt  Subscription.c  Subscription.h  client1.c  interface.c  keyValStore.c  keyValStore.h  main.c  main.h  semaphores.c  server.c  server.h  server1.c  server1.h  subscription.c  subscription.h  testPrints.h  testprints.c
BS_Pro/Emres garbage/: datenhaltung.cpp  example.cpp
BS_Pro/log/: return  return.txt
BS_Pro/storage/: placeholder.txt
Betriebssysteme/: interface.h  keyValStore.c  main.c  main.h  server.c  sub.c  sub.h
